# exe_diary

./: .env.example  .gitignore  README.md  pyproject.toml
src/exe_diary/: __init__.py  config.py  gui.py  main.py
src/exe_diary/app/: __init__.py  scheduler.py  workflow.py
src/exe_diary/db/: __init__.py  database.py  repositories.py  schema.sql
src/exe_diary/fit/: __init__.py  models.py  parser.py
src/exe_diary/garmin/: __init__.py  client.py  sync.py
src/exe_diary/ui/: __init__.py  app.py  prompt.py
